# wiki2beamer

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  ChangeLog  README  README.md  foo  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit-ci.yml  release.yml
code/: ChangeLog  README  changelog.txt  readme.txt  setup.py  wiki2beamer  wiki2beamer.py
code/example/: Makefile  version0_4.tex  version0_7.tex  wiki_advanced.txt  wiki_graphics.txt  wiki_version0_7.txt
doc/: .gitignore
doc/examples/: .gitignore  Makefile  advanced.tex  advanced.wiki  beamer.tex  beamer.wiki  graphics.tex  graphics.wiki  version0_4.wiki  version0_7.wiki  wiki2beamer.txt  wiki_advanced.txt  wiki_version0_4.txt
doc/man/: Makefile  wiki2beamer.adoc  wiki2beamer.xml
src/wiki2beamer/: __init__.py  cli.py  main.py
tests/: test_file2  test_file3  test_file_loop  test_wiki2beamer.py
tests/example/: .gitignore  Makefile  example.txt  includefile.txt
web/: Makefile  index.html
yappstest/: Makefile  test.sh  test.txt  test_complex.txt  w2b.g  w2b.py  w2b_frameing.g  w2b_test.py
